# botaclan-archives

./: .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  spotify.md
.circleci/: config.yml
.gitpod/: Dockerfile
botaclan/: __init__.py  __main__.py  bot.py  constants.py
botaclan/cogs/: calendar.py  musicplayer.py  roulette.py
botaclan/constants/: __init__.py  default.py
botaclan/google/: google_calendar.py
botaclan/healthcheck/: routes.py  server.py
botaclan/helpers/: date.py  lists.py  text.py
botaclan/player/: __init__.py  soundcloud.py  spotify.py  youtube.py
tests/: test_helpers.py
tests/google/: test_google_calendar.py
tests/helpers/: test_date.py  test_lists.py  test_text.py
