[tool.poetry]
name = "botaclan"
version = "0.1.0"
description = "Bataclan's official bot"
license = "Apache-2.0"
authors = [
    "Gabriel Tiossi <gabrieltiossi@gmail.com>"
]
maintainers = [
]
readme = "README.md"
homepage = ""
repository = "https://github.com/bataclanofficial/botaclan"
documentation = ""
keywords = [
    "discord",
    "bataclan",
    "python",
    "bot"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Chat"
] 

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
