[tool.poetry]
name = "botaclan"
version = "0.1.0"
description = "Bataclan's official bot"
license = "Apache-2.0"
authors = [
    "Gabriel Tiossi <gabrieltiossi@gmail.com>"
]
maintainers = [
]
readme = "README.md"
homepage = ""
repository = "https://github.com/bataclanofficial/botaclan"
documentation = ""
keywords = [
    "discord",
    "bataclan",
    "python",
    "bot"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Chat"
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"
coloredlogs = "^14.0"
vyper-config = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
